# opencv-windows

./: CMakeLists.txt  README.md  build.bat
include/: CameraHandler.hpp
src/: CameraHandler.cpp  main.cpp
